[package]
name = "bytering"
version = "0.4.0"
edition = "2021"
description = "A ring buffer specialized for vectored reading and writing in blocking and async I/O"
authors = ["Folke <folke@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = []
repository = "https://github.com/cloneable/bytering"
exclude = [".gitignore", ".github", "examples"]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
static_assertions = "1"
