[package]
name = "bytering"
version = "0.4.0"
edition = "2021"
description = "A ring buffer specialized for vectored reading and writing in blocking and async I/O"
authors = ["Folke <folke@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = ["buffer", "ringbuffer", "vectored-io", "lock-free"]
repository = "https://github.com/cloneable/bytering"
exclude = [".gitignore", ".github", "examples"]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
static_assertions = "1"

[profile.release]
lto = true
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 1
panic = "abort"
debug = false
strip = true
