[package]
name = "bytering"
version = "0.7.0"
edition = "2024"
rust-version = "1.95"
description = "A ring buffer specialized for vectored reading and writing in blocking and async I/O"
authors = ["Folke <folke@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = ["buffer", "ringbuffer", "vectored-io", "lock-free"]
repository = "https://github.com/cloneable/bytering"
exclude = [".gitignore", ".github", "examples"]

[features]
default = ["std"]
std = []

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
static_assertions = "1"

[[example]]
name = "spinthreads"
required-features = ["std"]

[profile.release]
lto = true
opt-level = 3
debug-assertions = false
overflow-checks = true
codegen-units = 1
panic = "abort"
debug = false
strip = true
